--- a/src/components/plasmic/mayfair_clarity_iq/PlasmicFourthfinancialperformance.module.css
+++ b/src/components/plasmic/mayfair_clarity_iq/PlasmicFourthfinancialperformance.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  width: 100%;
+  width: 100vw;
   height: auto;
   justify-content: flex-start;
   align-items: center;
@@ -47,7 +47,7 @@
 }
 .row {
   background: rgba(0, 0, 0, 0);
-  width: 100%;
+  width: 100vw;
   height: 25%;
   display: block;
   position: absolute;
@@ -66,7 +66,7 @@
 }
 .svg__k26LR {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #119746;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 16px;
@@ -132,7 +132,7 @@
 }
 .row2 {
   background: rgba(0, 0, 0, 0);
-  width: 100%;
+  width: 100vw;
   height: 25%;
   display: block;
   position: absolute;
@@ -151,7 +151,7 @@
 }
 .svg__yRckS {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #62cd14;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 16px;
@@ -217,7 +217,7 @@
 }
 .row3 {
   background: rgba(0, 0, 0, 0);
-  width: 100%;
+  width: 100vw;
   height: 25%;
   display: block;
   position: absolute;
@@ -263,7 +263,7 @@
 }
 .svg__dmSbm {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #8fe8b3;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 16px;
@@ -302,7 +302,7 @@
 }
 .row4 {
   background: rgba(0, 0, 0, 0);
-  width: 100%;
+  width: 100vw;
   height: 25%;
   display: block;
   position: absolute;
@@ -373,7 +373,7 @@
 }
 .svg___1HRxq {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #ccf7ae;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 16px;
@@ -396,7 +396,7 @@
 }
 .svg__vJix {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #dee1e6;
   width: 515px;
   height: 282px;
@@ -572,7 +572,7 @@
 }
 .svg___2OvZw {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #15abff;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 12px;
@@ -605,7 +605,7 @@
 }
 .svg__ohdu4 {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #b9e5ff;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 12px;
