--- a/src/components/plasmic/mayfair_clarity_iq/PlasmicCompetitiveintelligence.module.css
+++ b/src/components/plasmic/mayfair_clarity_iq/PlasmicCompetitiveintelligence.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  width: 100%;
+  width: 100vw;
   height: auto;
   justify-content: flex-start;
   align-items: center;
@@ -10,7 +10,7 @@
 }
 .wireframe12 {
   background: rgba(255, 255, 255, 1);
-  width: 1440px;
+  width: 100vw;
   height: 1024px;
   display: block;
   overflow: hidden;
@@ -19,7 +19,7 @@
 .dataTable {
   background: rgba(255, 255, 255, 1);
   filter: drop-shadow(0px 3px 3px rgba(17, 14, 39, 0.119));
-  width: 1440px;
+  width: 100vw;
   height: 1024px;
   display: block;
   position: absolute;
@@ -55,7 +55,7 @@
 }
 .svg__bfOjG {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #6d31ed;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 16px;
@@ -92,7 +92,7 @@
 }
 .rectangle {
   background: url("./images/rectangle2.png") 0px 0px / 36px 36px no-repeat;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   display: block;
   position: absolute;
@@ -126,7 +126,7 @@
 }
 .svg__eAbK {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #fff;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 16px;
@@ -140,7 +140,7 @@
 }
 .svg__sxrtv {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #323743;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -154,7 +154,7 @@
 }
 .svg___2XaMm {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #323743;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -220,7 +220,7 @@
 }
 .svg___9IMmA {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #9095a1;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 12px;
@@ -337,7 +337,7 @@
 }
 .svg__zDovl {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #9095a1;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 12px;
@@ -426,7 +426,7 @@
 }
 .svg___8D5Ww {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #9095a1;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 12px;
@@ -527,7 +527,7 @@
 }
 .svg__kolc9 {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #6f7787;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -565,7 +565,7 @@
 }
 .svg__ejv7V {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -579,7 +579,7 @@
 }
 .svg__kKhNt {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #f3f4f6;
   width: 220px;
   height: 2px;
@@ -590,7 +590,7 @@
 }
 .svg__xPuGg {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #f3f4f6;
   width: 220px;
   height: 2px;
@@ -634,7 +634,7 @@
 }
 .svg__c3Rit {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #fff;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -672,7 +672,7 @@
 }
 .svg__zcbkL {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -710,7 +710,7 @@
 }
 .svg__stQcZ {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -748,7 +748,7 @@
 }
 .svg__sGRfS {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -786,7 +786,7 @@
 }
 .svg__arNx0 {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -839,7 +839,7 @@
 .row {
   background: rgba(0, 0, 0, 0);
   transform: translate(0px, 0.19899999999999807px);
-  width: 100%;
+  width: 100vw;
   height: 20.77%;
   display: block;
   position: absolute;
@@ -993,7 +993,7 @@
 .row2 {
   background: rgba(0, 0, 0, 0);
   transform: translate(0px, 0.3990000000000009px);
-  width: 100%;
+  width: 100vw;
   height: 20.77%;
   display: block;
   position: absolute;
@@ -1147,7 +1147,7 @@
 .row3 {
   background: rgba(0, 0, 0, 0);
   transform: translate(0px, -0.39999999999997726px);
-  width: 100%;
+  width: 100vw;
   height: 20.77%;
   display: block;
   position: absolute;
@@ -1301,7 +1301,7 @@
 .row4 {
   background: rgba(0, 0, 0, 0);
   transform: translate(0px, -0.20100000000002183px);
-  width: 100%;
+  width: 100vw;
   height: 20.77%;
   display: block;
   position: absolute;
@@ -1454,7 +1454,7 @@
 }
 .header {
   background: rgba(0, 0, 0, 0);
-  width: 100%;
+  width: 100vw;
   height: 17.74%;
   display: block;
   position: absolute;
