--- a/src/components/plasmic/mayfair_clarity_iq/PlasmicCustomerinsights.module.css
+++ b/src/components/plasmic/mayfair_clarity_iq/PlasmicCustomerinsights.module.css
@@ -2,7 +2,7 @@
   display: grid;
   flex-direction: column;
   position: relative;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   align-content: flex-start;
   justify-items: center;
@@ -23,7 +23,7 @@
 }
 .wireframe8 {
   background: rgba(255, 255, 255, 1);
-  width: 1440px;
+  width: 100vw;
   height: 1024px;
   display: block;
   overflow: hidden;
@@ -31,7 +31,7 @@
 .dataTable {
   background: rgba(255, 255, 255, 1);
   filter: drop-shadow(0px 3px 3px rgba(17, 14, 39, 0.119));
-  width: 1440px;
+  width: 100vw;
   height: 1024px;
   display: block;
   position: absolute;
@@ -67,7 +67,7 @@
 }
 .svg__uL60 {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #6d31ed;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 16px;
@@ -107,7 +107,7 @@
 }
 .svg__opbc {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #6d31ed;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 16px;
@@ -144,7 +144,7 @@
 }
 .rectangle {
   background: url("./images/rectangle2.png") 0px 0px / 36px 36px no-repeat;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   display: block;
   position: absolute;
@@ -178,7 +178,7 @@
 }
 .svg__fduy7 {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #fff;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 16px;
@@ -192,7 +192,7 @@
 }
 .svg__u965Z {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #323743;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -206,7 +206,7 @@
 }
 .svg__n6Z9 {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #323743;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -272,7 +272,7 @@
 }
 .svg__l1MWb {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #9095a1;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 12px;
@@ -389,7 +389,7 @@
 }
 .svg__cKmO {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #9095a1;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 12px;
@@ -478,7 +478,7 @@
 }
 .svg__gpkJ {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #9095a1;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 12px;
@@ -578,7 +578,7 @@
 }
 .svg__lxS4E {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #6f7787;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -616,7 +616,7 @@
 }
 .svg__kmycI {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -630,7 +630,7 @@
 }
 .svg__rfkqx {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #f3f4f6;
   width: 220px;
   height: 2px;
@@ -641,7 +641,7 @@
 }
 .svg__mbgVg {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #f3f4f6;
   width: 220px;
   height: 2px;
@@ -685,7 +685,7 @@
 }
 .svg__dotY8 {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -723,7 +723,7 @@
 }
 .svg___2K8Uf {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -761,7 +761,7 @@
 }
 .svg__udtiy {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #fff;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -799,7 +799,7 @@
 }
 .svg__p9S0A {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -837,7 +837,7 @@
 }
 .svg__exWhp {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -875,7 +875,7 @@
 .row {
   background: rgba(221, 224, 229, 1);
   transform: translate(0px, 0.3990000000000009px);
-  width: 100%;
+  width: 100vw;
   height: 20.46%;
   display: block;
   position: absolute;
@@ -1018,7 +1018,7 @@
 .row2 {
   background: rgba(221, 224, 229, 1);
   transform: translate(0px, -0.20100000000002183px);
-  width: 100%;
+  width: 100vw;
   height: 20.46%;
   display: block;
   position: absolute;
@@ -1160,7 +1160,7 @@
 .row3 {
   background: rgba(221, 224, 229, 1);
   transform: translate(0px, 0.19999999999998863px);
-  width: 100%;
+  width: 100vw;
   height: 20.46%;
   display: block;
   position: absolute;
@@ -1302,7 +1302,7 @@
 .row4 {
   background: rgba(221, 224, 229, 1);
   transform: translate(0px, -0.4009999999999536px);
-  width: 100%;
+  width: 100vw;
   height: 20.46%;
   display: block;
   position: absolute;
@@ -1443,7 +1443,7 @@
 }
 .header {
   background: rgba(97, 204, 19, 1);
-  width: 100%;
+  width: 100vw;
   height: 18.54%;
   display: block;
   position: absolute;
