--- a/src/components/plasmic/mayfair_clarity_iq/PlasmicDecisionsupport.module.css
+++ b/src/components/plasmic/mayfair_clarity_iq/PlasmicDecisionsupport.module.css
@@ -2,7 +2,7 @@
   display: grid;
   flex-direction: column;
   position: relative;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   align-content: flex-start;
   justify-items: center;
@@ -23,7 +23,7 @@
 }
 .wireframe15 {
   background: rgba(255, 255, 255, 1);
-  width: 1440px;
+  width: 100vw;
   height: 1024px;
   display: block;
   overflow: hidden;
@@ -31,7 +31,7 @@
 .dataTable {
   background: rgba(255, 255, 255, 1);
   filter: drop-shadow(0px 3px 3px rgba(17, 14, 39, 0.119));
-  width: 1440px;
+  width: 100vw;
   height: 1023px;
   display: block;
   position: absolute;
@@ -64,7 +64,7 @@
 }
 .rectangle {
   background: url("./images/rectangle2.png") 0px 0px / 36px 36px no-repeat;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   display: block;
   position: absolute;
@@ -98,7 +98,7 @@
 }
 .svg__wVXwc {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #fff;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 16px;
@@ -112,7 +112,7 @@
 }
 .svg___9ObEl {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #323743;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -126,7 +126,7 @@
 }
 .svg__o0C3Z {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #323743;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -199,7 +199,7 @@
 }
 .svg__gfqdl {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #6f7787;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -237,7 +237,7 @@
 }
 .svg___4Ahkd {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -251,7 +251,7 @@
 }
 .svg__v2Nud {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #f3f4f6;
   width: 220px;
   height: 2px;
@@ -262,7 +262,7 @@
 }
 .svg__wYSh {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #f3f4f6;
   width: 220px;
   height: 2px;
@@ -306,7 +306,7 @@
 }
 .svg__jNOvf {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -344,7 +344,7 @@
 }
 .svg__nmBgj {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -382,7 +382,7 @@
 }
 .svg__mjUwQ {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -420,7 +420,7 @@
 }
 .svg__sPnQ {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -458,7 +458,7 @@
 }
 .svg__bZzU {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -496,7 +496,7 @@
 }
 .svg__bWGJ {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #fff;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -564,7 +564,7 @@
 }
 .svg__j7AGv {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #6d31ed;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 16px;
@@ -604,7 +604,7 @@
 }
 .svg__jOs0V {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #6d31ed;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 16px;
@@ -632,7 +632,7 @@
 .row {
   background: rgba(0, 0, 0, 0);
   transform: translate(0px, 0.1290000000000049px);
-  width: 100%;
+  width: 100vw;
   height: 25.87%;
   display: block;
   position: absolute;
@@ -815,7 +815,7 @@
 .row2 {
   background: rgba(0, 0, 0, 0);
   transform: translate(0px, -0.2400000000000091px);
-  width: 100%;
+  width: 100vw;
   height: 25.87%;
   display: block;
   position: absolute;
@@ -998,7 +998,7 @@
 .row3 {
   background: rgba(0, 0, 0, 0);
   transform: translate(0px, 0.38999999999998636px);
-  width: 100%;
+  width: 100vw;
   height: 25.87%;
   display: block;
   position: absolute;
@@ -1148,7 +1148,7 @@
 }
 .header {
   background: rgba(0, 0, 0, 0);
-  width: 100%;
+  width: 100vw;
   height: 22.73%;
   display: block;
   position: absolute;
