--- a/src/components/plasmic/mayfair_clarity_iq/PlasmicDinaggregation.module.css
+++ b/src/components/plasmic/mayfair_clarity_iq/PlasmicDinaggregation.module.css
@@ -2,7 +2,7 @@
   display: grid;
   flex-direction: column;
   position: relative;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   align-content: flex-start;
   justify-items: center;
@@ -23,7 +23,7 @@
 }
 .wireframe3 {
   background: rgba(255, 255, 255, 1);
-  width: 1440px;
+  width: 100vw;
   height: 1024px;
   display: block;
   overflow: hidden;
@@ -31,7 +31,7 @@
 .dataTable {
   background: rgba(255, 255, 255, 1);
   filter: drop-shadow(0px 3px 3px rgba(17, 14, 39, 0.119));
-  width: 1440px;
+  width: 100vw;
   height: 1024px;
   display: block;
   position: absolute;
@@ -65,7 +65,7 @@
 }
 .svg__xk6Mg {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #171a1f;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 16px;
@@ -105,7 +105,7 @@
 }
 .svg__soTg {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #9095a1;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 16px;
@@ -145,7 +145,7 @@
 }
 .svg__yD4Dh {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #9095a1;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 16px;
@@ -185,7 +185,7 @@
 }
 .svg__jKB9 {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #6d31ed;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 16px;
@@ -225,7 +225,7 @@
 }
 .svg__gmMzb {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #6d31ed;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 16px;
@@ -376,7 +376,7 @@
 }
 .svg__myxJr {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 20px;
@@ -390,7 +390,7 @@
 }
 .svg__usfc {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 20px;
@@ -441,7 +441,7 @@
 }
 .svg__zSvCi {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #f5f1fe;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 8px;
@@ -544,7 +544,7 @@
 }
 .svg__jSnWg {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 20px;
@@ -558,7 +558,7 @@
 }
 .svg__akxqt {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 20px;
@@ -699,7 +699,7 @@
 }
 .svg__fhaS2 {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 20px;
@@ -713,7 +713,7 @@
 }
 .svg__iikjn {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 20px;
@@ -764,7 +764,7 @@
 }
 .svg__juXk {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #f5f1fe;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 8px;
@@ -867,7 +867,7 @@
 }
 .svg__eEj {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 20px;
@@ -881,7 +881,7 @@
 }
 .svg__eGoIn {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 20px;
@@ -1022,7 +1022,7 @@
 }
 .svg__rigrp {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 20px;
@@ -1036,7 +1036,7 @@
 }
 .svg__i9Qzm {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 20px;
@@ -1197,7 +1197,7 @@
 }
 .svg___00P1M {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #fff;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 16px;
@@ -1234,7 +1234,7 @@
 }
 .rectangle7 {
   background: url("./images/rectangle2.png") 0px 0px / 36px 36px no-repeat;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   display: block;
   position: absolute;
@@ -1243,7 +1243,7 @@
 }
 .svg__kg7E8 {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #323743;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -1257,7 +1257,7 @@
 }
 .svg__rxkem {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #323743;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -1323,7 +1323,7 @@
 }
 .svg__hXmhf {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #9095a1;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 12px;
@@ -1440,7 +1440,7 @@
 }
 .svg__slvBc {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #9095a1;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 12px;
@@ -1529,7 +1529,7 @@
 }
 .svg___42Prh {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #9095a1;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 12px;
@@ -1629,7 +1629,7 @@
 }
 .svg__beqN {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #323743;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -1667,7 +1667,7 @@
 }
 .svg__pSpFg {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #fff;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -1681,7 +1681,7 @@
 }
 .svg__rPkQ8 {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #f3f4f6;
   width: 220px;
   height: 2px;
@@ -1692,7 +1692,7 @@
 }
 .svg___5Drgc {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #f3f4f6;
   width: 220px;
   height: 2px;
@@ -1736,7 +1736,7 @@
 }
 .svg___7Lrl9 {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -1774,7 +1774,7 @@
 }
 .svg__twEr9 {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -1812,7 +1812,7 @@
 }
 .svg__aUqvh {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -1850,7 +1850,7 @@
 }
 .svg__nxO6L {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -1888,7 +1888,7 @@
 }
 .svg__yujMm {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
