--- a/src/components/plasmic/mayfair_clarity_iq/PlasmicFinancialperformance.module.css
+++ b/src/components/plasmic/mayfair_clarity_iq/PlasmicFinancialperformance.module.css
@@ -2,7 +2,7 @@
   display: grid;
   flex-direction: column;
   position: relative;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   align-content: flex-start;
   justify-items: center;
@@ -23,7 +23,7 @@
 }
 .wireframe5 {
   background: rgba(255, 255, 255, 1);
-  width: 1440px;
+  width: 100vw;
   height: 1024px;
   display: block;
   overflow: hidden;
@@ -31,7 +31,7 @@
 .dataTable {
   background: rgba(255, 255, 255, 1);
   filter: drop-shadow(0px 3px 3px rgba(17, 14, 39, 0.119));
-  width: 1440px;
+  width: 100vw;
   height: 1024px;
   display: block;
   position: absolute;
@@ -67,7 +67,7 @@
 }
 .svg__aAloy {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #6d31ed;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 16px;
@@ -107,7 +107,7 @@
 }
 .svg__i8Zp2 {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #6d31ed;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 16px;
@@ -144,7 +144,7 @@
 }
 .rectangle {
   background: url("./images/rectangle2.png") 0px 0px / 36px 36px no-repeat;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   display: block;
   position: absolute;
@@ -178,7 +178,7 @@
 }
 .svg__iJ8L {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #fff;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 16px;
@@ -192,7 +192,7 @@
 }
 .svg__m82Vx {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #323743;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -206,7 +206,7 @@
 }
 .svg__zftrG {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #323743;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -272,7 +272,7 @@
 }
 .svg___8PzkI {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #9095a1;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 12px;
@@ -389,7 +389,7 @@
 }
 .svg__gsHYc {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #9095a1;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 12px;
@@ -478,7 +478,7 @@
 }
 .svg__kaTiQ {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #9095a1;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 12px;
@@ -579,7 +579,7 @@
 }
 .svg__r8N1I {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #6f7787;
   transform: skew(-0.057295760414500616deg, 0deg) translate(0px, -0.5px);
   width: 24px;
@@ -617,7 +617,7 @@
 }
 .svg__h0Dvg {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -631,7 +631,7 @@
 }
 .svg__i2Tpn {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #f3f4f6;
   width: 220px;
   height: 2px;
@@ -642,7 +642,7 @@
 }
 .svg__t4Shv {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #f3f4f6;
   width: 220px;
   height: 2px;
@@ -686,7 +686,7 @@
 }
 .svg__tBVo {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -724,7 +724,7 @@
 }
 .svg__kyjyn {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -762,7 +762,7 @@
 }
 .svg__odgk {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -800,7 +800,7 @@
 }
 .svg___5WGqp {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #fff;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -838,7 +838,7 @@
 }
 .svg__fMjJn {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -888,7 +888,7 @@
 }
 .svg__vOiw {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #6f7787;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -944,7 +944,7 @@
 }
 .frame8 {
   background: rgba(0, 0, 0, 0);
-  width: 100%;
+  width: 100vw;
   height: 100%;
   display: block;
   position: absolute;
@@ -953,7 +953,7 @@
 }
 .svg__fCyuS {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #62cd14;
   width: 198px;
   height: 100px;
@@ -964,7 +964,7 @@
 }
 .svg__fhLi {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #d3c1fa;
   width: 198px;
   height: 100px;
@@ -1461,7 +1461,7 @@
 }
 .img__r7UEu {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   width: 84px;
   height: 84px;
   display: block !important;
@@ -1483,7 +1483,7 @@
 }
 .img__o25Gc {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   width: 84px;
   height: 84px;
   display: block !important;
