--- a/src/components/plasmic/mayfair_clarity_iq/PlasmicFinancialperformancea.module.css
+++ b/src/components/plasmic/mayfair_clarity_iq/PlasmicFinancialperformancea.module.css
@@ -2,7 +2,7 @@
   display: grid;
   flex-direction: column;
   position: relative;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   align-content: flex-start;
   justify-items: center;
@@ -23,7 +23,7 @@
 }
 .wireframe10 {
   background: rgba(255, 255, 255, 1);
-  width: 1440px;
+  width: 100vw;
   height: 1880px;
   display: block;
   overflow: hidden;
@@ -31,7 +31,7 @@
 .financialDashboard2 {
   background: rgba(255, 255, 255, 1);
   filter: drop-shadow(0px 3px 3px rgba(17, 14, 39, 0.119));
-  width: 1440px;
+  width: 100vw;
   height: 1880px;
   display: block;
   position: absolute;
@@ -65,7 +65,7 @@
 }
 .svg__kQo5 {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #9095a1;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -79,7 +79,7 @@
 }
 .svg__lhZgQ {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #9095a1;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -93,7 +93,7 @@
 }
 .svg__eiS8H {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #9095a1;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -118,7 +118,7 @@
 }
 .rectangle {
   background: url("./images/rectangle2.png") 0px 0px / 36px 36px no-repeat;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   display: block;
   position: absolute;
@@ -204,7 +204,7 @@
 }
 .svg__s8Mm5 {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #119746;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 16px;
@@ -281,7 +281,7 @@
 }
 .svg__mHfmr {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #6d31ed;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 16px;
@@ -358,7 +358,7 @@
 }
 .svg__bljT {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #6d31ed;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 16px;
@@ -392,7 +392,7 @@
 }
 .img__bDoQ {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   width: 218px;
   height: 218px;
   display: block !important;
@@ -414,7 +414,7 @@
 }
 .img__kDbwf {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   width: 218px;
   height: 218px;
   display: block !important;
@@ -565,7 +565,7 @@
 }
 .img__vwSH {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   width: 255px;
   height: 255px;
   display: block !important;
@@ -595,7 +595,7 @@
 }
 .svg__sgKlo {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #119746;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 12px;
@@ -628,7 +628,7 @@
 }
 .svg__svZiR {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #62cd14;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 12px;
@@ -661,7 +661,7 @@
 }
 .svg__psQoi {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #ccf7ae;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 12px;
@@ -793,7 +793,7 @@
 }
 .svg___5EnR {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #bdc1ca;
   width: 648px;
   height: 2px;
@@ -983,7 +983,7 @@
 }
 .svg__iIlOq {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #bdc1ca;
   width: 648px;
   height: 2px;
@@ -994,7 +994,7 @@
 }
 .svg__o2QwP {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #bdc1ca;
   width: 648px;
   height: 2px;
@@ -1005,7 +1005,7 @@
 }
 .svg__fF7NH {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #bdc1ca;
   width: 648px;
   height: 2px;
@@ -1016,7 +1016,7 @@
 }
 .svg___7MiDz {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #bdc1ca;
   width: 648px;
   height: 2px;
@@ -1036,7 +1036,7 @@
 }
 .frame5 {
   background: rgba(0, 0, 0, 0);
-  width: 100%;
+  width: 100vw;
   height: 100%;
   display: block;
   position: absolute;
@@ -1045,7 +1045,7 @@
 }
 .svg__us42I {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #119746;
   width: 602px;
   height: 105px;
@@ -1056,7 +1056,7 @@
 }
 .svg__qFflg {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #bdc1ca;
   width: 2px;
   height: 333px;
@@ -1067,7 +1067,7 @@
 }
 .img__jUaO8 {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   box-shadow: 0px 4px 9px 0px rgba(22, 25, 30, 0.109),
     0px 0px 2px 0px rgba(22, 25, 30, 0.119);
   transform: skew(-0.057295760414500616deg, 0deg);
@@ -1084,7 +1084,7 @@
 }
 .img__j4Ife {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   width: 32px;
   height: 20px;
   display: block !important;
@@ -1121,7 +1121,7 @@
 }
 .frame6 {
   background: rgba(0, 0, 0, 0);
-  width: 100%;
+  width: 100vw;
   height: 100%;
   display: block;
   position: absolute;
@@ -1130,7 +1130,7 @@
 }
 .svg__d9ES {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #bdc1ca;
   width: 602px;
   height: 105px;
@@ -1249,7 +1249,7 @@
 }
 .img___5G1I {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   box-shadow: 0px 4px 9px 0px rgba(22, 25, 30, 0.109),
     0px 0px 2px 0px rgba(22, 25, 30, 0.119);
   transform: skew(-0.057295760414500616deg, 0deg);
@@ -1277,7 +1277,7 @@
 }
 .svg___0Wnhy {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #bdc1ca;
   width: 1051px;
   height: 2px;
@@ -1457,7 +1457,7 @@
 }
 .svg__hGp85 {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #bdc1ca;
   width: 1051px;
   height: 2px;
@@ -1468,7 +1468,7 @@
 }
 .svg__ebHiW {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #bdc1ca;
   width: 1051px;
   height: 2px;
@@ -1479,7 +1479,7 @@
 }
 .svg__h78F {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #bdc1ca;
   width: 1051px;
   height: 2px;
@@ -1490,7 +1490,7 @@
 }
 .svg__ig1Sz {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #bdc1ca;
   width: 1051px;
   height: 2px;
@@ -1715,7 +1715,7 @@
 }
 .svg___417E {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #9095a1;
   width: 171px;
   height: 2px;
@@ -1726,7 +1726,7 @@
 }
 .svg__kVq9 {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #9095a1;
   width: 171px;
   height: 2px;
@@ -1737,7 +1737,7 @@
 }
 .svg__frwWf {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #9095a1;
   width: 171px;
   height: 2px;
@@ -1748,7 +1748,7 @@
 }
 .svg__uJcvM {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #9095a1;
   width: 171px;
   height: 2px;
@@ -1759,7 +1759,7 @@
 }
 .svg__pWuR1 {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #9095a1;
   width: 171px;
   height: 2px;
@@ -1770,7 +1770,7 @@
 }
 .svg__bScUl {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #9095a1;
   width: 171px;
   height: 2px;
@@ -1781,7 +1781,7 @@
 }
 .svg__d5Jmg {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #9095a1;
   width: 171px;
   height: 2px;
@@ -1792,7 +1792,7 @@
 }
 .svg__gorbJ {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #9095a1;
   width: 171px;
   height: 2px;
@@ -1826,7 +1826,7 @@
 }
 .svg__rFhkS {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #171a1f;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 14px;
