--- a/src/components/plasmic/mayfair_clarity_iq/PlasmicKpireports.module.css
+++ b/src/components/plasmic/mayfair_clarity_iq/PlasmicKpireports.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  width: 100%;
+  width: 100vw;
   height: auto;
   justify-content: flex-start;
   align-items: center;
@@ -10,7 +10,7 @@
 }
 .wireframe2 {
   background: rgba(255, 255, 255, 1);
-  width: 1440px;
+  width: 100vw;
   height: 1024px;
   display: block;
   overflow: hidden;
@@ -19,7 +19,7 @@
 .conversionOutput {
   background: rgba(97, 204, 19, 1);
   filter: drop-shadow(0px 3px 3px rgba(17, 14, 39, 0.119));
-  width: 1440px;
+  width: 100vw;
   height: 1024px;
   display: block;
   position: absolute;
@@ -749,7 +749,7 @@
 }
 .svg__xfVyi {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #119746;
   width: 245.699px;
   height: 83.459px;
@@ -760,7 +760,7 @@
 }
 .svg__yq3T9 {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #8fe8b3;
   transform: translate(-0.3410000000000011px, -0.4099999999999966px);
   width: 172.38px;
@@ -772,7 +772,7 @@
 }
 .svg__vHwK5 {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #62cd14;
   transform: translate(0.3990000000000009px, 0.4000000000000057px);
   width: 120.9px;
@@ -1527,7 +1527,7 @@
   background: rgba(237, 239, 240, 1);
   filter: drop-shadow(0px 0px 0.5px rgba(22, 25, 30, 0.07))
     drop-shadow(0px 0px 1px rgba(22, 25, 30, 0.119));
-  width: 1440px;
+  width: 100vw;
   height: 90px;
   display: block;
   position: absolute;
