--- a/src/components/plasmic/mayfair_clarity_iq/PlasmicOurcommunity.module.css
+++ b/src/components/plasmic/mayfair_clarity_iq/PlasmicOurcommunity.module.css
@@ -2,7 +2,7 @@
   display: grid;
   flex-direction: column;
   position: relative;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   align-content: flex-start;
   justify-items: center;
@@ -23,7 +23,7 @@
 }
 .wireframe16 {
   background: rgba(255, 255, 255, 1);
-  width: 1440px;
+  width: 100vw;
   height: 2443px;
   display: block;
   overflow: hidden;
@@ -31,7 +31,7 @@
 .newsListing {
   background: rgba(255, 255, 255, 1);
   filter: drop-shadow(0px 3px 3px rgba(17, 14, 39, 0.119));
-  width: 1440px;
+  width: 100vw;
   height: 2441px;
   display: block;
   position: absolute;
@@ -258,7 +258,7 @@
 }
 .svg__adxh5 {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #a8adb7;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 16px;
@@ -314,7 +314,7 @@
 }
 .svg__eWuW5 {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #fff;
   transform: translate(0.20800000000001262px, 0px);
   width: 19.83px;
@@ -326,7 +326,7 @@
 }
 .svg__oYgz {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #fff;
   transform: translate(0.10900000000000887px, 0.38899999999999996px);
   width: 18.107px;
@@ -338,7 +338,7 @@
 }
 .svg___0NRkG {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #fff;
   transform: translate(-0.34199999999999875px, 0.38899999999999996px);
   width: 20.677px;
@@ -350,7 +350,7 @@
 }
 .svg__asMpG {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #fff;
   transform: translate(-0.23099999999999454px, 0.38899999999999996px);
   width: 18.108px;
@@ -362,7 +362,7 @@
 }
 .svg___7RZft {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #fff;
   transform: translate(0.3079999999999927px, 0.38899999999999996px);
   width: 21.034px;
@@ -374,7 +374,7 @@
 }
 .svg__uRj1P {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #fff;
   transform: translate(-0.19999999999998863px, 0.38899999999999996px);
   width: 18.108px;
@@ -386,7 +386,7 @@
 }
 .svg__kSfZl {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #fff;
   transform: translate(-0.06200000000000472px, -0.07500000000000284px);
   width: 18.011px;
@@ -398,7 +398,7 @@
 }
 .svg__nhAah {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #fff;
   transform: translate(-0.40399999999999636px, -0.09000000000000341px);
   width: 15.203px;
@@ -410,7 +410,7 @@
 }
 .svg__tJ2Y7 {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #fff;
   transform: translate(0.44300000000001205px, -0.09000000000000341px);
   width: 17.483px;
@@ -422,7 +422,7 @@
 }
 .svg__bzqXb {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #fff;
   transform: translate(-0.2599999999999909px, -0.0730000000000004px);
   width: 17.343px;
@@ -434,7 +434,7 @@
 }
 .svg__z1LE {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #fff;
   transform: translate(-0.12399999999999523px, -0.08300000000000551px);
   width: 17.112px;
@@ -446,7 +446,7 @@
 }
 .svg__j7O0P {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #fff;
   transform: translate(-0.34199999999998454px, -0.07500000000000284px);
   width: 18.01px;
@@ -458,7 +458,7 @@
 }
 .svg__dVCaS {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #fff;
   transform: translate(0.31100000000000705px, -0.09000000000000341px);
   width: 15.203px;
@@ -470,7 +470,7 @@
 }
 .svg__taN4 {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #6d31ed;
   transform: translate(0.1919999999999984px, 0.2430000000000021px);
   width: 3.64px;
@@ -482,7 +482,7 @@
 }
 .svg___5V1Sh {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #6d31ed;
   transform: translate(0px, 0.043px);
   width: 53.554px;
@@ -538,7 +538,7 @@
 }
 .svg__dnpvv {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #fff;
   width: 128px;
   height: 16px;
@@ -608,7 +608,7 @@
 }
 .svg__ruUwK {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #9f79f3;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
