--- a/src/components/plasmic/mayfair_clarity_iq/PlasmicPaymentform.module.css
+++ b/src/components/plasmic/mayfair_clarity_iq/PlasmicPaymentform.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  width: 100%;
+  width: 100vw;
   height: auto;
   justify-content: flex-start;
   align-items: center;
@@ -20,7 +20,7 @@
 }
 .svg___2SJ4P {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #fff;
   width: 16px;
   height: 8px;
@@ -31,7 +31,7 @@
 }
 .container99 {
   background: rgba(255, 255, 255, 1);
-  width: 100%;
+  width: 100vw;
   height: 100%;
   display: block;
   position: absolute;
@@ -74,7 +74,7 @@
 }
 .svg__ym4F {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #171a1f;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 16px;
@@ -133,7 +133,7 @@
 }
 .img {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 12px;
   height: 12px;
@@ -346,7 +346,7 @@
 }
 .svg__iAaHb {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #171a1f;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 16px;
@@ -405,7 +405,7 @@
 }
 .svg__gob0 {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #171a1f;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 16px;
@@ -464,7 +464,7 @@
 }
 .svg__mcFp8 {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #171a1f;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 16px;
