--- a/src/components/plasmic/mayfair_clarity_iq/PlasmicRiskidentification.module.css
+++ b/src/components/plasmic/mayfair_clarity_iq/PlasmicRiskidentification.module.css
@@ -2,7 +2,7 @@
   display: grid;
   flex-direction: column;
   position: relative;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   align-content: flex-start;
   justify-items: center;
@@ -23,7 +23,7 @@
 }
 .wireframe13 {
   background: rgba(255, 255, 255, 1);
-  width: 1440px;
+  width: 100vw;
   height: 1024px;
   display: block;
   overflow: hidden;
@@ -31,7 +31,7 @@
 .dataTable {
   background: rgba(255, 255, 255, 1);
   filter: drop-shadow(0px 3px 3px rgba(17, 14, 39, 0.119));
-  width: 1440px;
+  width: 100vw;
   height: 1023px;
   display: block;
   position: absolute;
@@ -67,7 +67,7 @@
 }
 .svg__iwly {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #6d31ed;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 16px;
@@ -104,7 +104,7 @@
 }
 .rectangle {
   background: url("./images/rectangle2.png") 0px 0px / 36px 36px no-repeat;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   display: block;
   position: absolute;
@@ -138,7 +138,7 @@
 }
 .svg__xzaX6 {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #fff;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 16px;
@@ -152,7 +152,7 @@
 }
 .svg__ayHxm {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #323743;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -166,7 +166,7 @@
 }
 .svg__jnFAm {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #323743;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -232,7 +232,7 @@
 }
 .svg__vSGhK {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #9095a1;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 12px;
@@ -349,7 +349,7 @@
 }
 .svg___3Wev0 {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #9095a1;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 12px;
@@ -438,7 +438,7 @@
 }
 .svg__ywoFk {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #9095a1;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 12px;
@@ -539,7 +539,7 @@
 }
 .svg__iOIwF {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #6f7787;
   transform: skew(-0.057295760414500616deg, 0deg) translate(0px, -0.5px);
   width: 24px;
@@ -577,7 +577,7 @@
 }
 .svg__wWyya {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -591,7 +591,7 @@
 }
 .svg__cgdgM {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #f3f4f6;
   width: 220px;
   height: 2px;
@@ -602,7 +602,7 @@
 }
 .svg__vHvKx {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #f3f4f6;
   width: 220px;
   height: 2px;
@@ -646,7 +646,7 @@
 }
 .svg___4QSnC {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -684,7 +684,7 @@
 }
 .svg__m0Omi {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -722,7 +722,7 @@
 }
 .svg__enKwy {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -760,7 +760,7 @@
 }
 .svg__xPnNj {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -798,7 +798,7 @@
 }
 .svg___1V8W {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #fff;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 24px;
@@ -835,7 +835,7 @@
 }
 .row {
   background: rgba(0, 0, 0, 0);
-  width: 100%;
+  width: 100vw;
   height: 15.88%;
   display: block;
   position: absolute;
@@ -999,7 +999,7 @@
 }
 .row2 {
   background: rgba(0, 0, 0, 0);
-  width: 100%;
+  width: 100vw;
   height: 15.88%;
   display: block;
   position: absolute;
@@ -1163,7 +1163,7 @@
 }
 .row3 {
   background: rgba(0, 0, 0, 0);
-  width: 100%;
+  width: 100vw;
   height: 15.88%;
   display: block;
   position: absolute;
@@ -1327,7 +1327,7 @@
 }
 .row4 {
   background: rgba(0, 0, 0, 0);
-  width: 100%;
+  width: 100vw;
   height: 21.02%;
   display: block;
   position: absolute;
@@ -1491,7 +1491,7 @@
 }
 .header {
   background: rgba(0, 0, 0, 0);
-  width: 100%;
+  width: 100vw;
   height: 31.3%;
   display: block;
   position: absolute;
