--- a/src/components/plasmic/mayfair_clarity_iq/PlasmicRiskmanagement.module.css
+++ b/src/components/plasmic/mayfair_clarity_iq/PlasmicRiskmanagement.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  width: 100%;
+  width: 100vw;
   height: auto;
   justify-content: flex-start;
   align-items: center;
@@ -10,7 +10,7 @@
 }
 .wireframe14 {
   background: rgba(255, 255, 255, 1);
-  width: 1440px;
+  width: 100vw;
   height: 1024px;
   display: block;
   overflow: hidden;
@@ -19,7 +19,7 @@
 .screen14 {
   background: rgba(255, 255, 255, 1);
   filter: drop-shadow(0px 3px 3px rgba(17, 14, 39, 0.119));
-  width: 1440px;
+  width: 100vw;
   height: 1005px;
   display: block;
   position: absolute;
@@ -43,7 +43,7 @@
 .row {
   background: rgba(0, 0, 0, 0);
   transform: translate(0px, -0.25px);
-  width: 100%;
+  width: 100vw;
   height: 25.63%;
   display: block;
   position: absolute;
@@ -164,7 +164,7 @@
 .row2 {
   background: rgba(0, 0, 0, 0);
   transform: translate(0px, -0.5px);
-  width: 100%;
+  width: 100vw;
   height: 25.63%;
   display: block;
   position: absolute;
@@ -285,7 +285,7 @@
 .row3 {
   background: rgba(0, 0, 0, 0);
   transform: translate(0px, 0.25px);
-  width: 100%;
+  width: 100vw;
   height: 25.63%;
   display: block;
   position: absolute;
@@ -405,7 +405,7 @@
 }
 .header {
   background: rgba(0, 0, 0, 0);
-  width: 100%;
+  width: 100vw;
   height: 23.25%;
   display: block;
   position: absolute;
