--- a/src/components/plasmic/mayfair_clarity_iq/PlasmicSeconddataintegration.module.css
+++ b/src/components/plasmic/mayfair_clarity_iq/PlasmicSeconddataintegration.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  width: 100%;
+  width: 100vw;
   height: auto;
   justify-content: flex-start;
   align-items: center;
@@ -10,7 +10,7 @@
 }
 .wireframe4 {
   background: rgba(255, 255, 255, 1);
-  width: 1440px;
+  width: 100vw;
   height: 1024px;
   display: block;
   overflow: hidden;
@@ -19,7 +19,7 @@
 .screen1 {
   background: rgba(255, 255, 255, 1);
   filter: drop-shadow(0px 3px 3px rgba(17, 14, 39, 0.119));
-  width: 1440px;
+  width: 100vw;
   height: 1024px;
   display: block;
   position: absolute;
@@ -43,7 +43,7 @@
 .row {
   background: rgba(0, 0, 0, 0);
   transform: translate(0px, -0.19999999999998863px);
-  width: 100%;
+  width: 100vw;
   height: 20.33%;
   display: block;
   position: absolute;
@@ -198,7 +198,7 @@
 .row2 {
   background: rgba(0, 0, 0, 0);
   transform: translate(0px, -0.39999999999997726px);
-  width: 100%;
+  width: 100vw;
   height: 20.33%;
   display: block;
   position: absolute;
@@ -353,7 +353,7 @@
 .row3 {
   background: rgba(0, 0, 0, 0);
   transform: translate(0px, 0.39999999999997726px);
-  width: 100%;
+  width: 100vw;
   height: 20.33%;
   display: block;
   position: absolute;
@@ -508,7 +508,7 @@
 .row4 {
   background: rgba(0, 0, 0, 0);
   transform: translate(0px, 0.20000000000004547px);
-  width: 100%;
+  width: 100vw;
   height: 20.33%;
   display: block;
   position: absolute;
@@ -662,7 +662,7 @@
 }
 .header {
   background: rgba(0, 0, 0, 0);
-  width: 100%;
+  width: 100vw;
   height: 18.77%;
   display: block;
   position: absolute;
