--- a/src/components/plasmic/mayfair_clarity_iq/PlasmicSecondfinancialperformance.module.css
+++ b/src/components/plasmic/mayfair_clarity_iq/PlasmicSecondfinancialperformance.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  width: 100%;
+  width: 100vw;
   height: auto;
   justify-content: flex-start;
   align-items: center;
@@ -10,7 +10,7 @@
 }
 .wireframe6 {
   background: rgba(255, 255, 255, 1);
-  width: 1440px;
+  width: 100vw;
   height: 1024px;
   display: block;
   overflow: hidden;
@@ -19,7 +19,7 @@
 .conversionOutput {
   background: rgba(255, 255, 255, 1);
   filter: drop-shadow(0px 3px 3px rgba(17, 14, 39, 0.119));
-  width: 1440px;
+  width: 100vw;
   height: 1024px;
   display: block;
   position: absolute;
@@ -192,7 +192,7 @@
 }
 .img__fWLez {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 12px;
   height: 12px;
@@ -462,7 +462,7 @@
 }
 .img__oiGnB {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 12px;
   height: 12px;
@@ -841,7 +841,7 @@
 }
 .svg {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #1eb3da;
   transform: skew(-0.057295760414500616deg, 0deg) translate(-0.5px, -0.5px);
   width: 50px;
