--- a/src/components/plasmic/mayfair_clarity_iq/PlasmicSecondworkflow.module.css
+++ b/src/components/plasmic/mayfair_clarity_iq/PlasmicSecondworkflow.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  width: 100%;
+  width: 100vw;
   height: auto;
   justify-content: flex-start;
   align-items: center;
@@ -10,7 +10,7 @@
 }
 .wireframe20 {
   background: rgba(255, 255, 255, 1);
-  width: 1440px;
+  width: 100vw;
   height: 1024px;
   display: block;
   overflow: hidden;
@@ -32,7 +32,7 @@
 .row {
   background: rgba(0, 0, 0, 0);
   transform: translate(0px, -0.19999999999998863px);
-  width: 100%;
+  width: 100vw;
   height: 20.33%;
   display: block;
   position: absolute;
@@ -188,7 +188,7 @@
 .row2 {
   background: rgba(0, 0, 0, 0);
   transform: translate(0px, -0.39999999999997726px);
-  width: 100%;
+  width: 100vw;
   height: 20.33%;
   display: block;
   position: absolute;
@@ -344,7 +344,7 @@
 .row3 {
   background: rgba(0, 0, 0, 0);
   transform: translate(0px, 0.39999999999997726px);
-  width: 100%;
+  width: 100vw;
   height: 20.33%;
   display: block;
   position: absolute;
@@ -499,7 +499,7 @@
 .row4 {
   background: rgba(0, 0, 0, 0);
   transform: translate(0px, 0.20000000000004547px);
-  width: 100%;
+  width: 100vw;
   height: 20.33%;
   display: block;
   position: absolute;
@@ -653,7 +653,7 @@
 }
 .header {
   background: rgba(0, 0, 0, 0);
-  width: 100%;
+  width: 100vw;
   height: 18.77%;
   display: block;
   position: absolute;
