--- a/src/components/plasmic/mayfair_clarity_iq/PlasmicSignin.module.css
+++ b/src/components/plasmic/mayfair_clarity_iq/PlasmicSignin.module.css
@@ -2,7 +2,7 @@
   display: grid;
   flex-direction: column;
   position: relative;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   align-content: flex-start;
   justify-items: center;
@@ -23,7 +23,7 @@
 }
 .wireframe17 {
   background: rgba(255, 255, 255, 1);
-  width: 1440px;
+  width: 100vw;
   height: 1024px;
   display: block;
   overflow: hidden;
@@ -31,7 +31,7 @@
 .signInWithEmailPassword1 {
   background: rgba(74, 188, 255, 1);
   filter: drop-shadow(0px 3px 3px rgba(17, 14, 39, 0.119));
-  width: 1440px;
+  width: 100vw;
   height: 1024px;
   display: block;
   position: absolute;
@@ -41,7 +41,7 @@
 }
 .svg___1NWxw {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #15abff;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 200px;
@@ -66,7 +66,7 @@
 }
 .svg__jocFf {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #15abff;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 493px;
@@ -190,7 +190,7 @@
 }
 .svg__iSicz {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #171a1f;
   transform: skew(-0.057295760414500616deg, 0deg) translate(0px, -0.5px);
   width: 16px;
@@ -259,7 +259,7 @@
 }
 .svg___9Is4D {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #565d6d;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 16px;
@@ -314,7 +314,7 @@
 }
 .svg__lwFy2 {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #335ca6;
   transform: skew(-0.057295760414500616deg, 0deg) translate(-0.5px, 0px);
   width: 16px;
@@ -354,7 +354,7 @@
 }
 .svg___5TfIe {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #c71610;
   transform: skew(-0.057295760414500616deg, 0deg) translate(-0.5px, 0px);
   width: 16px;
@@ -396,7 +396,7 @@
 }
 .svg__xuQlK {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #f5f1fe;
   transform: skew(-0.057295760414500616deg, 0deg);
   width: 12px;
@@ -422,7 +422,7 @@
 }
 .img {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   width: 429px;
   height: 440px;
   display: block !important;
@@ -479,7 +479,7 @@
 }
 .svg__ngPn8 {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #fff;
   transform: translate(-0.17999999999999972px, -0.22699999999999942px);
   width: 11.875px;
@@ -491,7 +491,7 @@
 }
 .svg__fV6Jx {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #fff;
   transform: translate(0.3230000000000004px, -0.18400000000000105px);
   width: 17.436px;
@@ -503,7 +503,7 @@
 }
 .svg__mvQrZ {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #fff;
   transform: translate(0.3299999999999983px, -0.16600000000000037px);
   width: 17.707px;
@@ -515,7 +515,7 @@
 }
 .svg__qxg7Y {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #fff;
   transform: translate(-0.29999999999999716px, -0.18400000000000105px);
   width: 17.436px;
@@ -527,7 +527,7 @@
 }
 .svg__d0LKv {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #fff;
   transform: translate(0.4579999999999984px, 0px);
   width: 15.244px;
@@ -539,7 +539,7 @@
 }
 .svg__d3Hkd {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #fff;
   transform: translate(0.4579999999999984px, 0.10999999999999943px);
   width: 15.244px;
@@ -551,7 +551,7 @@
 }
 .svg__zqGnn {
   object-fit: cover;
-  max-width: 100%;
+  max-width: 100vw;
   color: #fff;
   transform: translate(0px, 0.04999999999999982px);
   width: 12.957px;
